# far-buffer

./: CMakeLists.txt  far_buffer.hpp
cmake/: FarBufferConfig.cmake
tests/: CMakeLists.txt  far_buffer_tests.cpp
